--- a/templates/organization/users.html
+++ b/templates/organization/users.html
@@ -25,16 +25,7 @@
 {% endblock %}
 
 {% block users_js_media %}
-    <script type="text/javascript">
-        $(function () {
-            $('form.kick-form').find('a.button').click(function () {
-                if (confirm("{{ _('Are you sure you want to kick this user?') }}")) {
-                    $(this).parent().submit();
-                }
-                return false;
-            })
-        });
-    </script>
+    <script src="{{ static('bundled/organization/users.js') }}"></script>
 {% endblock %}
 
 {% block title_row %}
