--- a/templates/problem/list.html
+++ b/templates/problem/list.html
@@ -1,7 +1,7 @@
 {% extends "common-content.html" %}
 
 {% block media %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider/dist/nouislider.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider@15.7.1/dist/nouislider.min.css">
     <noscript>
         <style>#category, #types {
             visibility: visible;
