--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -58,20 +58,7 @@
     {% if not comment_lock %}
         {% include "comments/media-js.html" %}
     {% endif %}
-    <script type="text/javascript">
-        $(function() {
-            $('#pdf_button').click(async function(e) {
-                e.preventDefault();
-                if (!$('#raw_problem').attr("src"))
-                    $('#raw_problem').attr("src", "{{problem.code}}/raw");
-
-                while(!$('.math-loaded', frames['raw_problem'].document).length) {
-                    await new Promise(r => setTimeout(r, 200));
-                }
-                frames['raw_problem'].print();
-            });
-        });
-    </script>
+    <script src="{{ static('bundled/problem/problem.js') }}" data-problem-code="{{ problem.code }}"></script>
 {% endblock %}
 
 {% block title_row %}
