--- a/templates/organization/list.html
+++ b/templates/organization/list.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 {% block js_media %}
-    <script src="{{ static('libs/tablesorter.js') }}" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function () {
-            $('.organization-table').tablesorter({sortList: [[1, 1]]});
-        });
-    </script>
+    <script src="{{ static('bundled/organization/list.js') }}"></script>
 {% endblock %}
 
 {% block title_ruler %}{% endblock %}
