--- a/templates/tag/assign.html
+++ b/templates/tag/assign.html
@@ -1,22 +1,7 @@
 {% extends "base.html" %}
 
 {% block js_media %}
-    <script>
-        $(function () {
-            $('#tags').select2({
-                theme: '{{ DMOJ_SELECT2_THEME }}',
-                closeOnSelect:false
-            });
-
-            $('body').on('click', '.select2-results__group', function() {
-                $(this).siblings().toggle();
-            });
-
-            $('body').on('click', '.select2-selection__rendered', function() {
-                $('.select2-results__group').click();
-            });
-        });
-    </script>
+    <script src="{{ static('bundled/tag/assign.js') }}" data-select2-theme="{{ DMOJ_SELECT2_THEME }}"></script>
 {% endblock %}
 
 {% block media %}
