--- a/templates/contest/media-js.html
+++ b/templates/contest/media-js.html
@@ -2,5 +2,7 @@
     src="{{ static('bundled/contest/media-js.js') }}"
     data-official-contest-mode="{{ 'true' if request.official_contest_mode else 'false' }}"
     data-in-contest="{{ 'true' if request.in_contest else 'false' }}"
-    data-contest-name="{{ request.participation.contest.name }}"
+    {% if request.participation is not none %}
+        data-contest-name="{{ request.participation.contest.name }}"
+    {% endif %}
 ></script>
