refactor: converted more files (down to last 3!!!)

--- a/templates/timezone/media-js.html
+++ b/templates/timezone/media-js.html
@@ -1,16 +1,3 @@
 {% compress js %}
-    <script type="module">
-        import "$prebundled/featherlight/featherlight.min.js";
-        import "$prebundled/timezone-map/timezone-picker.js";
-
-        import timezonePickerJson from "$prebundled/timezone-map/timezone-picker.json";
-
-        $(() => {
-            $('#open-map').featherlight({
-                afterOpen() {
-                    timezone_picker($('.featherlight-inner .map-inset'), $('#id_timezone'), timezonePickerJson);
-                }
-            });
-        });
-    </script>
+    <script src="{{ static('bundled/timezone/media-js.js') }}"></script>
 {% endcompress %}
