--- a/templates/widgets/select_all.html
+++ b/templates/widgets/select_all.html
@@ -23,12 +23,4 @@
         list-style-type: none;
     }
 </style>
-<script type="text/javascript">
-    django.jQuery(($) => {
-        const box = $('div#' + '{{ select_all_name }}');
-        const original = box.find('.original-checkboxes');
-        $('.checkall').click(() => {
-            original.find(':checkbox').prop('checked', this.checked);
-        });
-    });
-</script>
+<script src="{{ static('bundled/widgets/select-all.js') }}" data-select-all-name="{{ select_all_name }}"></script>
