--- a/templates/ticket/ticket.html
+++ b/templates/ticket/ticket.html
@@ -3,165 +3,14 @@
 
 {% block js_media %}
     {{ form.media.js }}
-    <script src="{{ static('libs/featherlight/featherlight.min.js') }}" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(() => {
-            var $h2 = $('#content').find('> h2:first-child');
-            var $vote_status = $h2.find('.vote-status i'), $status = $h2.find('.status i'), $title = $h2.find('.title');
-
-            function update_ticket_state(open) {
-                if (open)
-                    $status.removeClass('fa-check-circle-o').addClass('fa-exclamation-circle');
-                else
-                    $status.removeClass('fa-exclamation-circle').addClass('fa-check-circle-o');
-                $('.close-ticket').toggle(open);
-                $('.open-ticket').toggle(!open);
-            }
-
-            function update_ticket_vote(contributive) {
-                if (contributive)
-                    $vote_status.removeClass('fa-minus').addClass('fa-arrow-up');
-                else
-                    $vote_status.removeClass('fa-arrow-up').addClass('fa-minus');
-                $('.vote-norm').toggle(contributive);
-                $('.vote-good').toggle(!contributive);
-            }
-
-            $('.close-ticket, .open-ticket').click(() => {
-                var open = $(this).attr('data-open') == '1';
-                $.ajax({
-                    url: $(this).attr('data-ajax'), type: 'POST',
-                    success() {
-                        update_ticket_state(open);
-                    },
-                    error(data) {
-                        alert("{{ _('Could not change ticket: {error}') }}".replace('{error}', data.responseText));
-                    }
-                });
-            });
-
-            $('.vote-good, .vote-norm').click(() => {
-                const contributive = $(this).attr('data-contributive') == '1';
-                $.ajax({
-                    url: $(this).attr('data-ajax'), type: 'POST',
-                    success: () => {
-                        update_ticket_vote(contributive);
-                    },
-                    error: (data) => {
-                        alert('Could not change ticket: ' + data.responseText);
-                    }
-                });
-            });
-
-            $('.edit-notes').featherlight({
-                afterOpen: () => {
-                    const $form = $('#edit-notes');
-                    $form.find('.submit').click(() => {
-                        $.post($form.attr('action'), $form.serialize()).done((data) => {
-                            $('#ticket-notes').find('.info-empty').toggle(!data).end().find('.info-real').html(data);
-                            $.featherlight.current().close();
-                        });
-                        return false;
-                    });
-                }
-            });
-
-            let page_ref_key = 'ticket:open:{{ ticket.id }}', page_close_key = page_ref_key + ':close';
-            let page_ref;
-
-            function increase_page_ref() {
-                if (page_ref_key in localStorage)
-                    localStorage[page_ref_key] = page_ref = +localStorage[page_ref_key] + 1;
-                else
-                    localStorage[page_ref_key] = page_ref = 1;
-            }
-
-            function decrease_page_ref() {
-                if (page_ref_key in localStorage) {
-                    localStorage[page_close_key] = page_ref;
-                    delete localStorage[page_close_key];
-                    localStorage[page_ref_key] = +localStorage[page_ref_key] - 1;
-                }
-                page_ref = null;
-            }
-
-            function is_highest_ref() {
-                console.log(localStorage[page_ref_key], page_ref);
-                if (page_ref_key in localStorage)
-                    return +localStorage[page_ref_key] == page_ref;
-                return true;
-            }
-
-            $(window).on('storage', (e) => {
-                e = e.originalEvent;
-                if (e.key == page_close_key && e.newValue !== null)
-                    if (page_ref != null && page_ref > +e.newValue)
-                        --page_ref;
-            });
-
-            register_notify('ticket', {
-                change(enabled) {
-                    if (enabled)
-                        increase_page_ref();
-                }
-            });
-
-            $(window).on('beforeunload', () => {
-                decrease_page_ref();
-            });
-
-            function ticket_status(ticket) {
-                update_ticket_state(ticket.open);
-                if (is_highest_ref())
-                    notify('ticket', (ticket.open ? "{{ _('Reopened: ') }}" :
-                        "{{ _('Closed: ') }}") + $title.text());
-            }
-
-            function ticket_message(ticket) {
-                console.log('Fetching data for: ' + ticket.message);
-                $.ajax({
-                    url: "{{ url('ticket_message_ajax', ticket.id) }}",
-                    data: {message: ticket.message},
-                    success(data) {
-                        console.log('Got data for: ' + ticket.message);
-                        console.log(data);
-                        $('#messages').append($(data.message));
-                    },
-                    error(data) {
-                        if (data.status === 403)
-                            console.log('No right to see: ' + ticket.message);
-                        else {
-                            console.log('Could not load ticket message:');
-                            console.log(data.responseText);
-                        }
-                    }
-                });
-            }
-
-            window.load_dynamic_update = () => {
-                eventDispatcher.auto_reconnect = true;
-                eventDispatcher.on('ticket-{{ ticket.id }}', (message) => {
-                        console.log(message);
-                        switch (message.type) {
-                            case 'ticket-status':
-                                ticket_status(message);
-                                break;
-                            case 'ticket-message':
-                                ticket_message(message);
-                                break;
-                        }
-                    }
-                );
-            }
-        });
-    </script>
+    <script 
+        src="{{ static('bundled/ticket/ticket/main.js') }}" 
+        data-ticket-id="{{ ticket.id }}" 
+        data-ticket-message-url="{{ url('ticket_message_ajax', ticket.id) }}"
+    ></script>
 
     {% if EVENT_LAST_MSG %}
-        <script type="text/javascript">
-            $(() => {
-                load_dynamic_update();
-            });
-        </script>
+        <script src="{{ static('bundled/ticket/ticket/dynamic.js') }}"></script>
     {% endif %}
 {% endblock %}
 
