--- a/templates/user/base-users.html
+++ b/templates/user/base-users.html
@@ -2,47 +2,11 @@
 
 {% block js_media %}
     {% block users_js_media %}{% endblock %}
-    <script>
-        $(() => {
-            $('#search-handle').replaceWith($('<select>').attr({
-                id: 'search-handle',
-                name: 'handle',
-                onchange: 'form.submit()'
-            }));
-            let in_user_redirect = false;
-            $('#search-handle').select2({
-                theme: '{{ DMOJ_SELECT2_THEME }}',
-                placeholder: "{{ _('Search by handle...') }}",
-                ajax: {
-                    url: "{{ url('user_search_select2_ajax') }}"
-                },
-                minimumInputLength: 1,
-                templateResult(data, container) {
-                    return $('<span>')
-                        .append($('<img>', {
-                            'class': 'user-search-image', src: data.gravatar_url,
-                            width: 24, height: 24
-                        }))
-                        .append($('<span>', {'class': data.display_rank + ' user-search-name'}).text(data.text));
-                }
-            }).on('select2:selecting', () => {
-                return !in_user_redirect;
-            });
-
-            let $last = null;
-            $(window).on('hashchange', () => {
-                const hash = window.location.hash;
-                if (hash.startsWith('#!')) {
-                    const $user = $('#user-' + hash.substring(2)).addClass('highlight');
-                    if ($user) {
-                        $(document).scrollTop($user.position().top - 50);
-                        if ($last !== null) $last.removeClass('highlight');
-                        $last = $user;
-                    }
-                }
-            }).trigger('hashchange');
-        });
-    </script>
+    <script 
+        src="{{ static('bundled/user/base-users.js') }}"
+        data-select2-theme="{{ DMOJ_SELECT2_THEME }}"
+        data-user-search-url="{{ url('user_search_select2_ajax') }}"
+    ></script>
 {% endblock %}
 
 {% block media %}
