--- a/templates/user/user-about.html
+++ b/templates/user/user-about.html
@@ -140,226 +140,12 @@
         {% include "mathjax-load.html" %}
     {% endif %}
 
-    <script type="text/javascript" src="{{ static('bundled/user_profile.js') }}"></script>
-    <script type="text/javascript">
-        $(() => {
-            window.init_submission_table($, JSON.parse("{{ submission_data }}"), JSON.parse("{{ submission_metadata }}"), "{{ LANGUAGE_CODE }}");
-        });
-    </script>
+    {{ submission_data|json_script("submission-data") }}
+    {{ submission_metadata|json_script("submission-metadata") }}
+    <script src="{{ static('bundled/user/user-about/user-profile.js') }}" data-language-code="{{ LANGUAGE_CODE }}"></script>
 
     {% if ratings %}
-        <script type="module">
-            import "$prebundled/chart.js/Chart.js";
-
-            const rating_history = JSON.parse("{{ rating_data }}");
-
-            $.each(rating_history, (index, item) => {
-                item.x = new Date(item.timestamp);
-                item.y = item.rating;
-            });
-
-            $(() => {
-                const $canvas = $('#rating-chart').find('canvas');
-                const ctx = $canvas.get(0).getContext('2d');
-
-                const getItem = (index) => {
-                    return rating_history[index];
-                };
-                const ratings = rating_history.map((x) => {
-                    return x.rating;
-                });
-
-                const originalDraw = Chart.controllers.scatter.prototype.draw;
-                Chart.helpers.extend(Chart.controllers.scatter.prototype, {
-                    draw: () => {
-                        var chart = this.chart;
-                        var yHighlight = chart.config.options.yHighlight;
-
-                        if (yHighlight != null) {
-                            var ctx = chart.chart.ctx;
-                            var xaxis = chart.scales['x-axis-1'];
-                            var yaxis = chart.scales['y-axis-1'];
-
-                            ctx.save();
-                            yHighlight.forEach(range => {
-                                var yRangeBeginPixel = yaxis.getPixelForValue(range.begin);
-                                var yRangeEndPixel = yaxis.getPixelForValue(range.end);
-
-                                if (range.begin >= yaxis.end || range.end <= yaxis.begin) {
-                                    return;
-                                }
-
-                                yRangeEndPixel = Math.max(yaxis.top + 1, yRangeEndPixel);
-                                yRangeBeginPixel = Math.min(yaxis.bottom - 1, yRangeBeginPixel);
-
-                                if (yRangeBeginPixel < yRangeEndPixel) {
-                                    return;
-                                }
-
-                                ctx.fillStyle = range.color;
-                                ctx.fillRect(
-                                    xaxis.left + 1,
-                                    yRangeEndPixel,
-                                    xaxis.right - xaxis.left,
-                                    yRangeBeginPixel - yRangeEndPixel,
-                                );
-                            });
-                            ctx.restore();
-                        }
-                        originalDraw.apply(this, arguments);
-                    }
-                });
-
-                window.rating_chart = new Chart(ctx, {
-                    type: 'scatter',
-                    data: {
-                        datasets: [{
-                            label: 'rating',
-                            backgroundColor: 'rgb(0, 0, 0, 0)',
-                            borderColor: '#A31515',
-                            pointBackgroundColor: '#FFF',
-                            pointHoverBackgroundColor: '#A31515',
-                            pointRadius: 5,
-                            pointHoverRadius: 5,
-                            showLine: true,
-                            data: rating_history,
-                        }]
-                    },
-                    options: {
-                        responsive: true,
-                        maintainAspectRatio: false,
-                        elements: {
-                            line: {
-                                tension: 0,
-                            },
-                        },
-                        legend: {
-                            display: false,
-                        },
-                        layout: {
-                            padding: {
-                                right: 10,
-                            },
-                        },
-                        scales: {
-                            xAxes: [{
-                                type: 'time',
-                                distribution: 'linear',
-                            }],
-                            yAxes: [{
-                                ticks: {
-                                    precision: 0,
-                                    suggestedMin: Math.max(0, Math.min.apply(null, ratings) - 50),
-                                    suggestedMax: Math.max.apply(null, ratings) + 50,
-                                },
-                            }],
-                        },
-                        tooltips: {
-                            enabled: false,
-                            custom(tooltipModel) {
-                                const $tooltip = $('#rating-tooltip');
-
-                                if (tooltipModel.opacity == 0) {
-                                    $tooltip.hide();
-                                    return;
-                                }
-
-                                const element = tooltipModel.dataPoints[0]
-                                const item = getItem(element.index);
-
-                                $tooltip.find('.contest').text(item.label);
-                                $tooltip.find('.date').text(item.date);
-                                $tooltip.find('.rate-box').attr('class', 'rate-box ' + item.class)
-                                        .find('span').css('height', item.height);
-                                $tooltip.find('.rating').text(item.rating).attr('class', 'rating ' + item.class);
-                                $tooltip.find('.rank').text(item.ranking);
-
-                                $tooltip.removeClass('above below');
-                                $tooltip.addClass(element.y < $tooltip.height() ? 'below' : 'above');
-
-                                const position = $canvas.offset();
-                                const container = $('#page-container').offset();
-                                $tooltip.css({
-                                    left: position.left - container.left + element.x + $tooltip.width() / 2,
-                                    top: position.top - container.top + element.y - $tooltip.height() - 13,
-                                    fontFamily: tooltipModel._bodyFontFamily,
-                                    fontSize: tooltipModel._bodyFontSize,
-                                    fontStyle: tooltipModel._bodyFontStyle,
-                                }).show();
-                            },
-                        },
-                        yHighlight: [
-                            {
-                                begin: 0,
-                                end: 1200,
-                                color: 'rgb(128, 128, 128, 0.43)'
-                            },
-                            {
-                                begin: 1200,
-                                end: 1400,
-                                color: 'rgb(0, 128, 0, 0.4)'
-                            },
-                            {
-                                begin: 1400,
-                                end: 1600,
-                                color: 'rgb(3, 168, 158, 0.4)'
-                            },
-                            {
-                                begin: 1600,
-                                end: 1900,
-                                color: 'rgb(0, 0, 255, 0.37)'
-                            },
-                            {
-                                begin: 1900,
-                                end: 2200,
-                                color: 'rgb(170, 0, 170, 0.4)'
-                            },
-                            {
-                                begin: 2200,
-                                end: 2300,
-                                color: 'rgb(255, 140, 0, 0.4)'
-                            },
-                            {
-                                begin: 2300,
-                                end: 2400,
-                                color: 'rgb(255, 140, 0, 0.4)'
-                            },
-                            {
-                                begin: 2400,
-                                end: 2600,
-                                color: 'rgb(255, 0, 0, 0.4)'
-                            },
-                            {
-                                begin: 2600,
-                                end: 2900,
-                                color: 'rgb(255, 0, 0, 0.4)'
-                            },
-                            {
-                                begin: 2900,
-                                end: 3600,
-                                color: 'rgb(165, 28, 28, 0.4)'
-                            }
-                        ],
-                    }
-                });
-
-                $canvas.click((evt) => {
-                    const elements = window.rating_chart.getElementsAtEvent(evt);
-                    if (elements.length > 0) {
-                        const item = getItem(elements[0]._index);
-                        window.location.href = item.link;
-                    }
-                });
-
-                $canvas.mousemove((evt) => {
-                    const elements = window.rating_chart.getElementsAtEvent(evt);
-                    if (elements.length > 0) {
-                        $canvas.css('cursor', 'pointer');
-                    } else {
-                        $canvas.css('cursor', '');
-                    }
-                });
-            });
-        </script>
+        {{ rating_data|json_script("rating-data") }}
+        <script src="{{ static('bundled/user/user-about/ratings.js') }}"></script>
     {% endif %}
 {% endblock %}
