--- a/templates/user/edit-profile.html
+++ b/templates/user/edit-profile.html
@@ -92,155 +92,11 @@
 {% block js_media %}
     {% include "timezone/media-js.html" %}
     {{ form.media.js }}
-    <script type="text/javascript">
-        $(() => {
-            $('#ace_user_script').on('ace_load', (e, editor) => {
-                editor.getSession().setMode("ace/mode/javascript");
-            });
-
-            $('#disable-2fa-button').click(() => {
-                alert("{{ _('The administrators for this site require all the staff to have Two-factor Authentication enabled, so it may not be disabled at this time.') }}");
-            });
-
-            $('#generate-api-token-button').click((event) => {
-                event.preventDefault();
-                if (confirm("{{ _('Are you sure you want to generate or regenerate your API token?') }}\n"
-                          + "{{ _('This will invalidate any previous API tokens.') }} "
-                          + "{{ _('It also allows access to your account without Two-factor Authentication.') }}\n\n"
-                          + "{{ _('You will not be able to view your API token after you leave this page!') }}")) {
-                    $('#api-token').text("{{ _('Generating...') }}");
-
-                    $.ajax({
-                        type: 'POST',
-                        url: $(this).attr('href'),
-                        dataType: 'json',
-                        success(data) {
-                            $('#api-token').text(data.data.token);
-                            $('#generate-api-token-button').text("{{ _('Regenerate') }}");
-
-                            // Add remove button on-the-fly
-                            if ($('#remove-api-token-button').length == 0) {
-                                $('#generate-api-token-button').after($(`<a id="remove-api-token-button" \
-                                    href="{{ url('remove_api_token') }}" \
-                                    class="button inline-button ml-5">{{ _('Remove') }}</a>`));
-                            }
-                        },
-                    });
-                }
-            });
-
-            // Delegated event handler because the remove button may have been added on-the-fly
-            $('#api-token-td').on('click', '#remove-api-token-button', (event) => {
-                event.preventDefault();
-                if (confirm("{{ _('Are you sure you want to remove your API token?') }}")) {
-                    $.ajax({
-                        type: 'POST',
-                        url: $(this).attr('href'),
-                        dataType: 'json',
-                        success(data) {
-                            $('#api-token').text('');
-                            $('#generate-api-token-button').text("{{ _('Generate') }}");
-                            $('#remove-api-token-button').remove();
-                        },
-                    });
-                }
-            });
-        });
-    </script>
-    {% include "user/webauthn-helpers.js" %}
-    <script>
-        $(() => {
-            $('#new-webauthn').click(event => {
-                event.preventDefault();
-
-                $.getJSON("{{ url('webauthn_attest') }}")
-                    .done(publicKey => {
-                        decodeJSONBytes(publicKey);
-                        navigator.credentials.create({publicKey})
-                            .then(credential => {
-                                credential = {
-                                    id: credential.id,
-                                    response: {
-                                        attObj: urlSafeBase64Encode(credential.response.attestationObject),
-                                        clientData: urlSafeBase64Encode(credential.response.clientDataJSON),
-                                    }
-                                };
-                                $.post("{{ url('webauthn_attest') }}", {
-                                    credential: JSON.stringify(credential),
-                                    name: $('#new-webauthn-name').val(),
-                                })
-                                    .then(() => window.location.reload())
-                                    .fail((jqXHR) => alert(jqXHR.responseText));
-                            });
-                    })
-                    .fail(() => alert("{{ _('Failed to contact server.') }}"));
-            });
-
-            $('.webauthn-delete').click((event) => {
-                event.preventDefault();
-                if (confirm("{{ _('Are you sure you want to delete this security key?') }}")) {
-                    $.post($(this).attr('data-delete-url'))
-                        .then(() => window.location.reload())
-                        .fail((jqXHR) => alert(jqXHR.responseText));
-                }
-            });
-        });
-    </script>
-    <script type="module">
-        import "$prebundled/clipboard/clipboard.js";
-        import "$prebundled/clipboard/tooltip.js";
-
-        $(() => {
-            $('#generate-scratch-codes-button').click((event) => {
-                event.preventDefault();
-                if (confirm("{{ _('Are you sure you want to generate or regenerate a new set of scratch codes?') }}\n"
-                          + "{{ _('This will invalidate any previous scratch codes you have.') }}\n\n"
-                          + "{{ _('You will not be able to view your scratch codes after you leave this page!') }}")) {
-                    $('#scratch-codes').text("{{ _('Generating...') }}");
-
-                    $('pre code').each(() => {
-                        var copyButton;
-                        $(this).parent().before($('<div>', {'class': 'copy-clipboard'})
-                            .append(copyButton = $('<span>', {
-                                'class': 'btn-clipboard',
-                                'id': 'scratch-codes-copy-button',
-                                'data-clipboard-text': '',
-                                'title': "{{ _('Click to copy') }}"
-                            }).text("{{ _('Copy') }}")));
-
-                        $(copyButton.get(0)).mouseleave(() => {
-                            $(this).attr('class', 'btn-clipboard');
-                            $(this).removeAttr('aria-label');
-                        });
-
-                        var curClipboard = new Clipboard(copyButton.get(0));
-
-                        curClipboard.on('success', (e) => {
-                            e.clearSelection();
-                            showTooltip(e.trigger, "{{ _('Copied!') }}");
-                        });
-
-                        curClipboard.on('error', (e) => {
-                            showTooltip(e.trigger, fallbackMessage(e.action));
-                        });
-                    });
-
-                    $.ajax({
-                        type: 'POST',
-                        url: $(this).attr('href'),
-                        dataType: 'json',
-                        success: (data) => {
-                            $('#scratch-codes').text(data.data.codes.join('\n'));
-                            $('#scratch-codes-copy-button').attr('data-clipboard-text', data.data.codes.join('\n'));
-                            $('#generate-scratch-codes-button').text("{{ _('Regenerate') }}");
-                            $('#hidden-word').hide();
-                            $('#scratch-codes-regen').show();
-                        },
-                    });
-                }
-            });
-        });
-    </script>
+    <script 
+        src="{{ static('bundled/user/edit-profile.js') }}"
+        data-remove-api-token="{{ url('remove_api_token') }}"
+        data-webauthn-attest="{{ url('webauthn_attest') }}"
+    ></script>
 {% endblock %}
 
 {% block title_ruler %}{% endblock %}
