--- a/templates/problem/raw.html
+++ b/templates/problem/raw.html
@@ -81,7 +81,7 @@
 <div class="content-description printing">
     {{ description|markdown(problem.markdown_style, 'tex')|reference|absolutify(url)|str|safe }}
 </div>
-<script type="text/javascript" src="{{ urljoin(url, static('mathjax_config.js')) }}"></script>
+<script type="text/javascript" src="{{ urljoin(url, static('bundled/mathjax-config.js')) }}"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.0/es5/tex-chtml.min.js"></script>
 <script type="text/javascript">
     MathJax.typesetPromise().then(function () {
